<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/niceBlue">

        <ImageButton
            android:id="@+id/me_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="7dp"
            android:src="@mipmap/me_back"
            android:background="#0000"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me_detail"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="#0000"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/me_edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/me_edit_btn"
            android:textColor="#ffffff"
            android:background="#0000"/>

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="30dp"
        android:id="@+id/me_head_portrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/me_head_portrait"/>

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/me_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22sp"
        android:text="@string/me_nickname"/>

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/me_intro"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/me_intro"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="50dp"
        android:paddingTop="50dp"
        android:paddingEnd="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/me_account_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_account_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/me_sex_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me_sex"/>
    </LinearLayout>

    <Button
        android:layout_margin="50dp"
        android:id="@+id/me_history_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/me_history"
        android:textColor="#ffffff"
        android:background="@color/niceBlue"/>

</LinearLayout>