<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/niceBlue">

        <Button
            android:id="@+id/share_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:text="@string/share_cancel_btn"
            android:textColor="#ffffff"
            android:background="#0000"/>

        <Button
            android:id="@+id/share_enter_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/share_enter_btn"
            android:textColor="#ffffff"
            android:background="#0000"/>

    </RelativeLayout>

    <EditText
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/share_text" />
    
    <ImageButton
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/share_add_photo"/>

    <Button
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/niceBlue"
        android:textColor="#ffffff"
        android:text="@string/share_location_btn"/>
    
</LinearLayout>